--- a/index.html
+++ b/index.html
@@ -8,12 +8,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <meta charset="UTF-8">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-    <script src="./assets/maugallery.js" defer></script>
-    <script src="./assets/scripts.js" defer></script>
     <title>Nina Carducci - Photographe professionnelle</title>
     <meta name="description" content="Nina Carducci, photographe professionnelle en Île-de-France. Shooting photo, retouches et albums personnalisés.">
+	<style>
+		body {
+			max-width: 1920px;
+			margin: auto;
+			font-family: 'Inter', sans-serif;
+		}
+		
+		.top-header {
+			background-color: white;
+			position: sticky;
+			top: 0;
+			z-index: 1000;
+			display: flex;
+			justify-content: space-between;
+			padding-inline: 100px;
+			padding-block: 30px;
+			align-items: center;
+		}
+		
+		.top-header .name {
+			font-size: 26px;
+		}
+		
+		.nav ul {
+			display: flex;
+			list-style-type: none;
+			font-size: 14px;
+			margin-bottom: 0;
+		}
+		
+		.nav a {
+			text-decoration: none;
+			color: #000;
+		}
+		
+		.carousel-item {
+			height: 100%;
+			overflow: hidden;
+		}
+		</style>
 </head>
 <body>
     <div class="top-header">
@@ -37,13 +73,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaires marchant sur un passage piéton" loading="lazy" width="100vw" height="879px">
+                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaires marchant sur un passage piéton" loading="lazy" width="1920" height="879">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule enthousiaste à un concert" loading="lazy" width="100vw" height="879px">
+                    <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule enthousiaste à un concert" loading="lazy" width="1920" height="879">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Couple de mariés s'embrassant" loading="lazy" width="100vw" height="879px">
+                    <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Couple de mariés s'embrassant" loading="lazy" width="1920" height="879">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -155,5 +191,10 @@
 		</div>
 	</div>
 </div>
+<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script defer src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script defer src="./assets/maugallery.js"></script>
+<script defer src="./assets/scripts.js"></script>
+
 </body>
 </html>
